# FreeRTOS-DHT22-Sensor-Driver-for-Pico

./: CMakeLists.txt  README.md
DHT22-master/: DHT22.c  DHT22.h  main.c
